- (Bug Fix) Fixed a issue with Safari that was caused by the z-index property not being set, which would force the toolbar windows behind the photo being cropped.

--- a/themes/photo_frame/css/photo_frame.css
+++ b/themes/photo_frame/css/photo_frame.css
@@ -399,6 +399,7 @@ a.photo-frame-tool-window-close {
 .photo-frame-crop {
 	display: inline-block;
 	display: none;
+	z-index: 0;
 }
 .photo-frame-crop-photo {
 	background: url('../img/canvas-background.jpg') 0 0 repeat;	
